tests/invalid/10_let_struct.ml
struct Point {
    int32 x;
    int32 y;
}

int main() {
    let Point p = Point { x: 1, y: 2 };

    p.x = 10;

    return 0;
}
